refactor: adopt Lombok and OpenAPI for user APIs
Use Lombok for DTOs/services and add Springdoc annotations for user endpoints.

Co-authored-by: Cursor <cursoragent@cursor.com>